# permis-course

./: .gitignore  2-regle_de_barre-RECTO.txt  2-regle_de_barre-VERSO.txt  3-Les signaux-VERSO.txt  3-Les_signaux-RECTO.txt  4-Feux-RECTO.txt  4-Feux-VERSO.txt  5-securite-RECTO.txt  5-securite-VERSO.txt  6-La_navigation-RECTO.txt  6-La_navigation-VERSO.txt  7-La_pratique-RECTO.txt  7-La_pratique-VERSO.txt  BACKLOG.md  CHANGELOG.md  CLAUDE.md  MASTER_PLAN_WIKI.md  Mot de passe cours.doc  PLAN.md  README.md  SETUP.md  anfr-licence.txt  anfr-manuel_crr.txt  extract.py  extract_mac_vision.py  extract_phase4.py  extract_phase5.py  install.sh  pyproject.toml
.claude/: bootstrap-version.json
.claude-plugin/: plugin.json
.gemini/: settings.json
Cours 2/: playlist.txt
Cours 2/Q-eval/: Thumbs.db
Wiki/: EDUCATIONAL-USE.md  README.md  SCHEMA.md
Wiki/meta/: index.md  log.md  student-progress.json  visual-assets-needed.md
docs/: course-architecture-plan.md  repository-structure.md  source-freshness.md  wiki-build-plan.md
output/: permis-cours-complet.html
rendered/: session-01-balisage.html  session-02-regles-barre.html  session-03-feux-signaux.html  session-04-securite.html  session-05-examen-blanc.html  session-05-navigation.html  session-06-pratique-reglementation.html  session-07-radio-vhf.html  session-08-examen-blanc.html
scripts/: __init__.py  render_complete.py  render_course.py  render_lessons.py  wiki_health.py
templates/: permis-course-index.html.j2  permis-course.html.j2  permis-lesson.html.j2
tests/: test_renderer.py  test_wiki_health.py
(+276 files in other folders)
