[project]
name = "permis-course"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fsrs",
    "jinja2",
    "markdown-it-py",
    "pdf2image>=1.17.0",
    "pdfplumber",
    "pyobjc-framework-quartz>=12.1",
    "pyobjc-framework-vision>=12.1",
    "pypdfium2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
    # report-renderer is a private Stromy lib — only needed to regenerate HTML output.
    # Students install via uv sync (no --dev needed); authors run uv sync --dev.
    "report-renderer @ file:///Users/williammasquelier/Repositories/stromy-org/libs/report-renderer",
]

[tool.pytest.ini_options]
pythonpath = ["."]
